# prompt-slots

./: .env.example  README.md  client.py  demo.py  extender.py  generator.py  install.sh  main.py  pyproject.toml  streamlit_component.py
docs/: HOWTO.md
docs/plans/: 2026-02-18-add-prompt-slots-skill-design.md  2026-02-18-add-prompt-slots-skill.md
generate_prompts/: __init__.py  animation.py  client.py  config.py  extender.py  generator.py  normalizer.py  streamlit_component.py
skill/: SKILL.md  install.sh
